--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "whellness-wheel project",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js", 
+    "start": "node index.js",
     "dev": "NODE_ENV=development nodemon -r dotenv/config server.js",
     "prod": "NODE_ENV=production nodemon -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
-  ,
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sanjueranga/WW-back-end.git"
@@ -21,9 +20,14 @@
   },
   "homepage": "https://github.com/sanjueranga/WW-back-end#readme",
   "dependencies": {
+    "cookies": "^0.8.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.6.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
